# mate-rs

./: .gitignore  Cargo.toml
.mate/: refactor-plan.md
examples/: mdcat_sample.md  mdcat_tui_preview.rs
src/: agent.rs  config.rs  herdr.rs  integration.rs  lib.rs  main.rs  message.rs  prompts.rs  provider.rs  skills.rs  slack.rs  telegram.rs  util.rs
src/agent/: compaction.rs  format.rs  loop_.rs  mod.rs  tests.rs  tools.rs  types.rs
src/config/: load.rs  mod.rs  path.rs  save.rs  tests.rs  types.rs
src/core/: bootstrap.rs  local.rs  mod.rs  resolve.rs  run.rs  scheduler.rs  session.rs  session_manager.rs
src/markdown/: mod.rs  slack.rs  telegram.rs
src/provider/: client.rs  mod.rs  stream.rs  tests.rs  types.rs
src/render/: block.rs  highlight.rs  mod.rs  table.rs  theme.rs
src/render/mdcat/: mod.rs  references.rs  resources.rs  terminal.rs  theme.rs
src/render/mdcat/render/: highlighting.rs  mod.rs  write.rs
src/render/mdcat/terminal/: capabilities.rs  size.rs
src/session/: cache.rs  keystore.rs  mod.rs  store.rs  types.rs
src/tools/: bash.rs  edit_file.rs  gitignore.rs  glob.rs  grep.rs  index.rs  mod.rs  read_file.rs  webfetch.rs  write_file.rs
src/tui/: chat.rs  chat_dropdowns.rs  chat_format.rs  chat_handlers.rs  chat_render.rs  config_editor.rs  file_picker.rs  mod.rs  session_list.rs  theme.rs
src/tui/chat/: commands.rs  dropdowns.rs  messages.rs  mod.rs  textarea.rs
src/tui/config_editor/: edit.rs  fields.rs  mod.rs  rows.rs
