[package]
name = "mate"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mate-rs"
path = "src/main.rs"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1"
sha2 = "0.11"
hex = "0.4"
htmd = "0.5"
rand = "0.10"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "process", "io-util", "time"] }
reqwest = { version = "0.13", features = ["json", "stream"] }
regex = "1"
once_cell = "1"
async-trait = "0.1"
futures-util = "0.3"
tokio-tungstenite = { version = "0.30", features = ["native-tls"] }
tempfile = "3"
log = "0.4"
yaml_serde = "0.10"
walkdir = "2"
ratatui = "0.30"
crossterm = "0.29"
syntect = { version = "5", features = ["default-syntaxes"] }
unicode-width = "0.2"
arboard = "3"

[dev-dependencies]
wiremock = "0.6"