[package]
name = "mate"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "mate"
path = "src/main.rs"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = { version = "1", features = ["preserve_order"] }
sha2 = "0.11"
hex = "0.4"
htmd = "0.5"
rand = "0.10"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "process", "io-util", "time"] }
reqwest = { version = "0.13", features = ["json", "stream", "multipart"] }
regex = "1"
globset = "0.4"
once_cell = "1"
async-trait = "0.1"
futures-util = "0.3"
tokio-tungstenite = { version = "0.30", features = ["native-tls"] }
tempfile = "3"
log = "0.4"
env_logger = "0.11"
yaml_serde = "0.10"
walkdir = "2"
ratatui = "0.30"
crossterm = "0.29"
syntect = { version = "5", features = ["default-syntaxes"] }
unicode-width = "0.2"
pulldown-cmark = "0.12"
anstyle = "1"
textwrap = { version = "0.16", features = ["unicode-linebreak", "unicode-width"] }
url = "2"
arboard = "3"
headless_chrome = "1"
tree-sitter = "0.26"
tree-sitter-rust = "0.24"
tree-sitter-go = "0.25"
tree-sitter-typescript = "0.23"
tree-sitter-css = "0.25"

[dev-dependencies]
similar-asserts = "1"
wiremock = "0.6"

[profile.release]
opt-level     = "z"      # or "s" – optimize for size; "3" for speed
lto           = true     # enable link-time optimisation
codegen-units = 1        # better optimisation, slower compilation
panic         = "abort"  # strip unwinding machinery
strip         = true     # remove debug symbols (or use `strip` binary separately)
